src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Trade_Associations__c</fullName>
        <label>Trade Association Name</label>
        <picklist>
            <picklistValues>
                <fullName>ELFA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crawford Connection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NARI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIGP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GNMAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None Selected</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Contractor__c</fullName>
        <description>What does the contractor call themselves</description>
        <label>Type of Contractor</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exporter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military / Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi Family Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Painter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Investor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remodeler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restoration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Information_requested__c</fullName>
        <inlineHelpText>Describe the type of information the Lead is interested in getting.</inlineHelpText>
        <label>Type of Information requested</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Profession__c</fullName>
        <label>Type of Profession</label>
        <picklist>
            <picklistValues>
                <fullName>MRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remodeler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restoration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tyson_Trial_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tyson Trial Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unassigned_Queue_Interval__c</fullName>
        <formula>NOW()- Date_for_Unassigned_Lead__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unassigned Queue Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Usage_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Usage Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WOD_Active_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the LEAD has a Web on Demand active account</description>
        <inlineHelpText>Indicates if the lead has a Web Enabled Business or Web on Demand account</inlineHelpText>
        <label>WEB Active User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WOD_Address__c</fullName>
        <description>Indicates the Web on Demand address for the lead</description>
        <inlineHelpText>Indicates the Web on Demand address for the lead</inlineHelpText>
        <label>WEB Address</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Web_to_Lead_Source_del__c</fullName>
        <label>Web to Lead Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_flow_run__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Work flow run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Z_lead_created__c</fullName>
        <defaultValue>0</defaultValue>
        <description>For 125 gallons to pass</description>
        <label>Z lead created</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip_Code_lookup_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zip Code lookup</label>
        <referenceTo>Zip_Code_Assignment__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>case_safe_id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>case safe id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Paint_Crews__c</fullName>
        <inlineHelpText>Related Questions for Paint and Wall Covering</inlineHelpText>
        <label>Size of Paint Crew</label>
        <picklist>
            <controllingField>Market_Segment__c</controllingField>
            <picklistValues>
                <fullName>1-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 and more</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sub_lead_source_clone_2__c</fullName>
        <description>used to automatically copy to opportunity via workflow</description>
        <label>sub-lead source clone 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sub_lead_source_clone__c</fullName>
        <description>sub lead source - to allow for lead source on account</description>
        <label>sub-lead source clone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>All Leads</label>
        <language>en_US</language>
        <sharedTo>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Eloqua_Backlog</fullName>
        <filterScope>Queue</filterScope>
        <label>Eloqua Backlog</label>
        <language>en_US</language>
        <queue>Eloqua_Backlog</queue>
        <sharedTo>
            <role>ProMarketingUser</role>
            <role>ProMktgAdministrator</role>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mid_Atlantic_Team_Leads</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>EDP1__MostRecentActivityDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>cooley,grant,jackson,jones,kearney,laracuente,marrick,riley,rodriguez,zentz</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>drivers</value>
        </filters>
        <label>Mid Atlantic Team Leads</label>
        <language>en_US</language>
        <sharedTo>
            <role>Behr_Pro_Rep_Mid_Atlantic</role>
            <role>PRSVP</role>
            <role>Pro_Sales_VP_Central</role>
            <role>Pro_Sales_VP_East</role>
            <role>Pro_Sales_VP_West</role>
            <role>ROM_RPSM_Mid_Altantic</role>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <filterScope>Mine</filterScope>
        <label>My Leads</label>
        <language>en_US</language>
        <sharedTo>
            <role>Behr_Pro_Rep_East</role>
            <role>Behr_Pro_Rep_East_1</role>
            <role>Behr_Pro_Rep_East_3</role>
            <role>Behr_Pro_Rep_Mid_Atlantic</role>
            <role>Behr_Pro_Rep_North_Atlantic</role>
            <role>Behr_Pro_Rep_Southwest</role>
            <role>Behr_Pro_Rep_West</role>
            <role>Behr_Pro_Rep_West_2</role>
            <role>Behr_Pro_Rep_West_3</role>
            <role>Behr_Pro_Rep_West_4</role>
            <role>NAM_Manager</role>
            <role>NAM_VP</role>
            <role>PRSVP</role>
            <role>ProMarketingUser</role>
            <role>ProMktgAdministrator</role>
            <role>Pro_Sales_VP_Central</role>
            <role>Pro_Sales_VP_East</role>
            <role>Pro_Sales_VP_West</role>
            <role>ROM_RPSM_East</role>
            <role>ROM_RPSM_East_2</role>
            <role>ROM_RPSM_East_3</role>
            <role>ROM_RPSM_Mid_Altantic</role>
            <role>ROM_RPSM_North_Atlantic</role>
            <role>ROM_RPSM_Southwest</role>
            <role>ROM_RPSM_West</role>
            <role>ROM_RPSM_West_2</role>
            <role>ROM_RPSM_West_3</role>
            <role>ROM_RPSM_West_4</role>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Trade_Show_Leads</fullName>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.LAST_NAME</columns>
        <columns>LEAD.FIRST_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Trade_Association_Affiliation__c</columns>
        <columns>Email_Opt_In__c</columns>
        <columns>LEAD.EMAIL_OPT_OUT</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Trade_Association_Affiliation__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>Regional Event/Trade Show,Mktg-driven National Event/Trade Show</value>
        </filters>
        <label>My Trade Show Leads</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>Commercial_PMCP</group>
            <group>PMC_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NAA_BOMA_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Trade_Association_Affiliation__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Trade_Association_Affiliation__c</field>
            <operation>equals</operation>
            <value>IBS 2015</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Enrique</value>
        </filters>
        <label>Tradeshow Leads</label>
        <language>en_US</language>
        <sharedTo>
            <group>Enrique_and_Ryan</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PMR_PMC_Leads</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.LAST_NAME</columns>
        <columns>LEAD.FIRST_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STATE</columns>
        <columns>Metro_Area__c</columns>
        <columns>Sales_Volume_Range__c</columns>
        <columns>Employee_Size_Range__c</columns>
        <columns>Primary_SIC_Description__c</columns>
        <columns>Secondary_SIC_Description_1__c</columns>
        <columns>Secondary_SIC_Description_2__c</columns>
        <filterScope>Queue</filterScope>
        <label>PMR &amp; PMC Leads</label>
        <language>en_US</language>
        <queue>PMR_PMC_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>PMC_Team</group>
            <group>PMR_Team</group>
            <role>PRSVP</role>
            <role>Pro_Sales_VP_Central</role>
            <role>Pro_Sales_VP_East</role>
            <role>Pro_Sales_VP_West</role>
            <role>ROM_RPSM_East</role>
            <role>ROM_RPSM_East_2</role>
            <role>ROM_RPSM_East_3</role>
            <role>ROM_RPSM_Mid_Altantic</role>
            <role>ROM_RPSM_North_Atlantic</role>
            <role>ROM_RPSM_Southwest</role>
            <role>ROM_RPSM_West</role>
            <role>ROM_RPSM_West_2</role>
            <role>ROM_RPSM_West_3</role>
            <role>ROM_RPSM_West_4</role>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pac_North_Team_Leads</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>LEAD.UNREAD</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Markes,Ferrito,Taff,Poort,Marlatt,churchill,schlessman,warburton</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Kiper</value>
        </filters>
        <label>Pac North Team Leads</label>
        <language>en_US</language>
        <sharedTo>
            <group>RPSMLMarkes</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pac_South_Team_Leads</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Burnside,Dierkes,Emmett,Gaeta,Gallaher,Gomez,Huffman,Martin</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Maruna,McCormick,Medina,Emmert</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>mmart</value>
        </filters>
        <label>Pac South Team Leads</label>
        <language>en_US</language>
        <sharedTo>
            <role>Behr_Pro_Rep_West</role>
            <role>PRSVP</role>
            <role>Pro_Sales_VP_Central</role>
            <role>Pro_Sales_VP_East</role>
            <role>Pro_Sales_VP_West</role>
            <role>ROM_RPSM_East</role>
            <role>ROM_RPSM_East_2</role>
            <role>ROM_RPSM_East_3</role>
            <role>ROM_RPSM_Mid_Altantic</role>
            <role>ROM_RPSM_North_Atlantic</role>
            <role>ROM_RPSM_Southwest</role>
            <role>ROM_RPSM_West</role>
            <role>ROM_RPSM_West_2</role>
            <role>ROM_RPSM_West_3</role>
            <role>ROM_RPSM_West_4</role>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Re_Assign_Queue</fullName>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.LAST_NAME</columns>
        <columns>LEAD.FIRST_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Queue</filterScope>
        <label>Re-Assign Queue</label>
        <language>en_US</language>
        <queue>ReAssignQueue</queue>
        <sharedTo>
            <group>ProSALESMgmt</group>
            <group>Sales_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>South_Central_Team_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Aguilar,Farias,Gonzales,Kael,Martinez,Nowak,Phillips,Ross,Smink,Turner</value>
        </filters>
        <label>South Central Team Leads</label>
        <language>en_US</language>
        <sharedTo>
            <role>Behr_Pro_Rep_West_2</role>
            <role>Pro_Sales_VP_Central</role>
            <role>ROM_RPSM_West_2</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Southwest_Team_Leads</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>polzin,altamirano,parker,merrow,dennis,phannenstiel,gritchen,seele,smith</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>kosierowski,faulkner,flesher,murray,aquirre,davis</value>
        </filters>
        <label>Southwest Team Leads</label>
        <language>en_US</language>
        <sharedTo>
            <group>RPSM_BMahoney</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Team_MCGUIRE_Leads</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Cauley,Crosier,Denton,Dimartino,Kosowski,Madrigal,Revis,Sulkowski,Sykes,Szostek</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Thorne,Williams,Zinda</value>
        </filters>
        <label>Team MCGUIRE Leads</label>
        <sharedTo>
            <group>PersonalViewDMCGUIRE</group>
            <group>RPSMDMcGuire</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tyson_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.CONVERTED</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>Tyson Trial Program</value>
        </filters>
        <label>Tyson Leads</label>
        <language>en_US</language>
        <sharedTo>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Standard_Leads</fullName>
        <active>true</active>
        <businessProcess>BehrPro Process</businessProcess>
        <description>This record type is used for standard leads</description>
        <label>Standard Leads</label>
    </recordTypes>
    <validationRules>
        <fullName>BEHR_Email_and_Phone_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(( Phone &lt;&gt; null &amp;&amp; Email = null) || ( Phone = null &amp;&amp; Email &lt;&gt; null) || ( Phone &lt;&gt; null &amp;&amp; Email &lt;&gt; null),false,true)</errorConditionFormula>
        <errorMessage>Please enter either phone or email</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BEHR_First_Name_Required</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISNULL(FirstName ), ISBLANK(FirstName ) )</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>Please enter First Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pro_Reward_Account_Number_Mandatory</fullName>
        <active>true</active>
        <description>Pro_Reward_Account_Number_Mandatory if Pro Rewards Member is chosen as &apos;Yes&apos;</description>
        <errorConditionFormula>AND( ISPICKVAL( Pro_Rewards_Member__c ,&apos;YES&apos;), ISBLANK(Pro_Rewards_Account_Number__c ))</errorConditionFormula>
        <errorDisplayField>Pro_Rewards_Account_Number__c</errorDisplayField>
        <errorMessage>&apos;Pro Reward Account Number&apos; field is Mandatory if &apos;Pro Reward Member&apos; Chosen as&apos; Yes&apos;.</errorMessage>
    </validationRules>
</CustomObject>